# cyclic-learning-rate

./: .gitignore  JOB_SCRIPT.sh  pyproject.toml  requirements.txt  train.py
configs/: densenet121_cifar10.yaml  densenet121_cifar100.yaml  resnet34_cifar10.yaml  resnet34_cifar100.yaml
utils/: __init__.py  data.py  models.py  schedulers.py  transforms.py
