[project]
name = "cyclic-learning-rate"
version = "0.1.0"
description = "Investigation of Cyclical Learning Rates for Training Neural Networks"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
